--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   padding: 1rem;
+  font-size: clamp(1rem, 3vw, 3rem);
+  position: relative;
 }
 
 @media screen and (min-width: 50em) {
@@ -9,4 +11,12 @@
     padding: 2rem;
     max-height: calc(100vh - 4rem);
   }
+}
+
+.covered {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: blur(5px) brightness(0.7);
+  top: 0;
 }
