--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -1,11 +1,6 @@
-.container {
-  font-size: clamp(2rem, 5vw, 6rem);
-  padding: 1rem;
-}
-
 .list {
   display: flex;
-  justify-content: space-around;
+  gap: 1rem;
 }
 
 .button:hover {
@@ -14,17 +9,4 @@
 
 .selected-button {
   background-color: red;
-}
-
-@media screen and (min-width: 50em) {
-  .container {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .list {
-    flex-direction: column;
-  }
 }
