--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .container {
   font-size: clamp(2rem, 5vw, 6rem);
-  padding: 1rem;
+  padding-inline: max(2rem, 2vw);
   display: flex;
   justify-content: space-between;
   align-items: center;
