--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -5,4 +5,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px 2.5px var(--link);
+}
+
+.svgContainer:hover {
+  box-shadow: 0 0 10px 5px var(--link);
 }
