--- a/src/components/MenuIcon/MenuIcon.module.css
+++ b/src/components/MenuIcon/MenuIcon.module.css
@@ -1,15 +1,20 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  height: 6rem;
+  width: 6rem;
+  gap: 1rem;
+
   padding: 1rem;
-  cursor: pointer;
   border-radius: 1rem;
-  position: relative;
+  cursor: pointer;
+  box-shadow: 0 0 5px 2.5px var(--link);
 }
 
-.container:active {
-  background-color: var(--light);
+.container:hover {
+  box-shadow: 0 0 10px 5px var(--link);
 }
 
 .bar {
@@ -18,34 +23,23 @@
   background-color: var(--link);
   border-radius: 10rem;
   transition: ease 0.5s;
-  position: absolute;
-}
-
-.bar:nth-of-type(1) {
-  top: 0;
 }
 
 .bar:nth-of-type(2) {
   width: 4rem;
-  top: 10px;
-}
-
-.bar:nth-of-type(3) {
-  top: 20px;
 }
 
 .active .bar:nth-of-type(1) {
-  position: absolute;
-  top: 10px;
-  transform: rotate(135deg);
+  transform: translateY(1.1rem) rotate(225deg);
+  width: 4rem;
 }
 
 .active .bar:nth-of-type(2) {
-  width: 0;
+  width: 0px;
+  height: 0px;
 }
 
 .active .bar:nth-of-type(3) {
-  position: absolute;
-  top: 10px;
-  transform: rotate(-135deg);
+  transform: translateY(-1.1rem) rotate(-225deg);
+  width: 4rem;
 }
