--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -1,22 +1,8 @@
 .container {
   width: 100%;
   height: 100%;
-  padding: 1rem;
+  padding: 2rem 2rem 0 2rem;
   font-size: clamp(1rem, 3vw, 3rem);
   position: relative;
-}
-
-@media screen and (min-width: 50em) {
-  .container {
-    padding: 2rem;
-    max-height: calc(100vh - 4rem);
-  }
-}
-
-.covered {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: blur(5px) brightness(0.7);
-  top: 0;
+  /* overflow-y: scroll; */
 }
