--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --link: #6fd2ff;
   --light: #6fd1ff34;
   --text: #e5e5e5;
+  --background: linear-gradient(-45deg, #162c35 70%, #0c252f 100%);
 }
 
 html,
