--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,12 +1,11 @@
 .svgContainer {
-  height: 6rem;
-  width: 6rem;
-  cursor: pointer;
+  height: 5rem;
+  width: 5rem;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 1rem;
-  box-shadow: 0 0 5px 2.5px var(--link);
+  border-radius: 3rem;
 }
 
 .svgContainer:hover {
