--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,12 +1,21 @@
 .container {
-  /* display: none; */
   border: 1px solid red;
   position: absolute;
-  top: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: var(--link);
   transition: ease 0.3s;
+  z-index: -1;
+  opacity: 0;
 }
 
 .open {
-  display: block;
-  top: 10%;
+  /* top: 0; */
+  z-index: 500;
+  width: 50%;
+  height: 50%;
+  opacity: 1;
 }
