--- a/src/components/MenuIcon/MenuIcon.module.css
+++ b/src/components/MenuIcon/MenuIcon.module.css
@@ -3,14 +3,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 6rem;
-  width: 6rem;
+  height: 5rem;
+  width: 5rem;
   gap: 1rem;
 
   padding: 1rem;
-  border-radius: 1rem;
-  cursor: pointer;
-  box-shadow: 0 0 5px 2.5px var(--link);
+  border-radius: 3rem;
 }
 
 .container:hover {
@@ -21,7 +19,7 @@
   width: 3rem;
   height: 0.2rem;
   background-color: var(--link);
-  border-radius: 10rem;
+  border-radius: min(10rem, 100px);
   transition: ease 0.5s;
 }
 
