--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,21 +1,39 @@
 .container {
-  border: 1px solid red;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  background-color: var(--link);
-  transition: ease 0.3s;
   z-index: -1;
-  opacity: 0;
+  display: flex;
+  justify-content: center;
+  transition: ease 0.3s;
 }
 
 .open {
-  /* top: 0; */
-  z-index: 500;
-  width: 50%;
-  height: 50%;
-  opacity: 1;
+  z-index: 1;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  transition: ease 0.3s;
+  color: var(--link);
+  font-size: 3rem;
+  font-family: var(--clickable);
+  padding: 2rem;
+}
+
+.item:nth-of-type(odd) {
+  transform: translateX(-100vw);
+}
+
+.item:nth-of-type(even) {
+  transform: translateX(100vw);
+}
+
+.open .item {
+  transform: translateX(0);
 }
