--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   --light: #6fd1ff34;
   --text: #e5e5e5;
   --background: black;
+  --clickable: "Roboto Mono", monospace;
 }
-/* --background: black; linear-gradient(-45deg, #162c35 70%, #0c252f 100%);*/
 
 html,
 body,
@@ -12,19 +12,47 @@ body,
   height: 100%;
   font-size: 62.5%;
   color: var(--text);
+  scroll-behavior: smooth;
+}
+
+html.scrollbar-hidden {
+  padding-right: 13px;
+  background: var(--background);
+}
+
+*::-webkit-scrollbar {
+  width: 13px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--background);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--light);
+  border-radius: 6px;
+  border: 3px solid var(--background);
 }
 
 body {
   margin: 0;
-  font-family: "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+body .content > *:not(.menu) {
+  transition: filter ease 0.5s;
+}
+
 body.blur .content > *:not(.menu) {
-  filter: blur(5px) brightness(0.7);
+  filter: blur(5px) brightness(0.3);
+}
+
+body.blur {
+  overflow: hidden;
 }
 
 * {
@@ -32,6 +60,7 @@ body.blur .content > *:not(.menu) {
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  scrollbar-color: var(--link) var(--background);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -44,7 +73,11 @@ button {
   color: inherit;
   cursor: pointer;
   padding: 1rem;
-  border-radius: 5px 10px 15px 20px;
+  border-radius: 0.5rem;
+}
+
+button:hover {
+  box-shadow: 0 0 10px 5px var(--link);
 }
 
 code {
