--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,4 +1,5 @@
 .container {
+  width: 60%;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -14,16 +15,20 @@
 }
 
 .list {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
 
 .item {
+  width: 100%;
   transition: ease 0.3s;
   color: var(--link);
   font-size: 3rem;
   font-family: var(--clickable);
-  padding: 2rem;
+  /* padding: 2rem; */
 }
 
 .item:nth-of-type(odd) {
@@ -36,4 +41,9 @@
 
 .open .item {
   transform: translateX(0);
+}
+
+.button {
+  width: 100%;
+  padding: 2rem;
 }
