--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -5,8 +5,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: -1;
-  display: flex;
-  justify-content: center;
   transition: ease 0.3s;
 }
 
@@ -15,11 +13,9 @@
 }
 
 .list {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
 }
 
 .item {
@@ -28,7 +24,6 @@
   color: var(--link);
   font-size: 3rem;
   font-family: var(--clickable);
-  /* padding: 2rem; */
 }
 
 .item:nth-of-type(odd) {
@@ -43,7 +38,9 @@
   transform: translateX(0);
 }
 
-.button {
+.link {
   width: 100%;
+  display: flex;
+  justify-content: center;
   padding: 2rem;
 }
