--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --light: #6fd1ff34;
   --text: #e5e5e5;
   --background: black;
+  --background-light: rgba(0, 0, 0, 0.85);
   --clickable: "Roboto Mono", monospace;
 }
 
@@ -47,7 +48,8 @@ body .content > *:not(.menu) {
   transition: filter ease 0.5s;
 }
 
-body.blur .content > *:not(.menu) {
+body.blur .content > *:not(.menu),
+body.blur .hero > * {
   filter: blur(5px) brightness(0.3);
 }
 
@@ -64,7 +66,12 @@ body.blur {
   -webkit-tap-highlight-color: transparent;
 }
 
-button {
+a {
+  text-decoration: none;
+}
+
+button,
+a {
   outline: none;
   border: none;
   background-color: unset;
@@ -76,6 +83,7 @@ button {
   border-radius: 0.5rem;
 }
 
+a:hover,
 button:hover {
   box-shadow: 0 0 10px 5px var(--link);
 }
