--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,59 +1,26 @@
 .container {
   height: calc(100vh - 9rem);
-  padding: 9rem 4rem 0;
+  padding-inline: 4rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 5rem;
+  gap: 4rem;
 }
 
 .name {
-  font-size: min(15vw, 10rem);
+  font-size: 5rem;
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 .sub {
-  font-size: min(10vw, 3rem);
+  font-size: 3rem;
   font-weight: 200;
   color: rgb(180, 180, 180);
   font-family: var(--clickable);
   color: var(--link);
-}
 
-.blurb {
-  font-size: 2rem;
-  font-weight: 300;
-  line-height: 1.3;
-  letter-spacing: 0.5px;
-  color: rgb(180, 180, 180);
-}
-
-.link {
-  color: var(--link);
-  padding: 0;
-}
-
-.link:hover {
-  box-shadow: none;
-  text-decoration-line: underline;
-  text-decoration-thickness: 0.5px;
-  text-underline-offset: 2px;
-}
-
-.icons {
-  color: white;
-  display: flex;
-  gap: 2rem;
-}
-
-.icon {
-  font-size: 5rem !important;
-  color: var(--link);
-}
-
-.sub {
   animation: typing 2s steps(18), blink 0.5s step-end alternate infinite;
   white-space: nowrap;
   overflow: hidden;
@@ -72,4 +39,53 @@
   50% {
     border-color: transparent;
   }
+}
+
+.blurb {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  color: rgb(180, 180, 180);
+}
+
+.link {
+  color: var(--link);
+  padding: 0;
+}
+
+.blurb .link:hover {
+  box-shadow: none;
+  text-decoration-line: underline;
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 2px;
+}
+
+.contact {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  color: rgb(180, 180, 180);
+}
+
+.icons {
+  color: white;
+  display: flex;
+  gap: 2rem;
+}
+
+.icons .link {
+  font-size: 1.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.icon {
+  font-size: 5rem !important;
+  color: var(--link);
 }
