--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,15 +1,10 @@
 .technologies {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  gap: 3rem;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
 }
 
-.grid {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-}
-
-.item {
-  padding: 1rem;
-  background-color: black;
+.columnHeader {
+  color: var(--link);
+  font-size: 1.5rem;
 }
