--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,24 +1,35 @@
 .container {
-  height: 100%;
-  padding: 2rem;
-  overflow-y: scroll;
+  width: 100%;
+  padding-inline: 10%;
+
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  color: rgb(180, 180, 180);
+}
+
+.title {
+  font-weight: 600;
+  font-size: 2rem;
+  color: var(--link);
+  font-family: var(--clickable);
+}
+
+.projectList {
   display: flex;
   flex-direction: column;
-  gap: max(1rem, 2vw);
+  gap: 2rem;
 }
 
-.container::-webkit-scrollbar {
-  display: none;
-}
-
-.card {
-  padding: max(1rem, 1vw);
-  gap: max(0.5rem, 1vw);
+.project {
+  background-color: var(--light);
+  border-radius: 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 5px solid;
-  border-radius: 1rem;
+  gap: 1rem;
 }
 
 .img {
@@ -26,23 +37,21 @@
   border-radius: 1rem;
 }
 
-.heading,
-.subheading {
-  font-size: clamp(2rem, 5vw, 6rem);
+.link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.hr {
-  width: 100%;
-}
-
-.tabs {
-  width: 100%;
+.technologies {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
 .tab {
-  padding: min(1rem, 1.5vw);
-  border-radius: 5px 10px 15px 20px;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  background-color: var(--link);
+  color: black;
 }
