--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -69,23 +69,10 @@
   color: rgb(180, 180, 180);
 }
 
-.icons {
-  color: white;
-  display: flex;
-  gap: 2rem;
-}
-
-.icons .link {
-  font-size: 1.5rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
-.icon {
-  font-size: 5rem !important;
+.resume {
+  font-family: var(--clickable);
   color: var(--link);
+  width: fit-content;
+  font-size: 1.75rem;
+  padding: 1rem;
 }
