--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -49,3 +49,30 @@
   padding: 1rem;
   font-size: 2rem;
 }
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 25%;
+}
+
+.icons {
+  display: flex;
+  gap: 1rem;
+}
+
+.contact .link {
+  font-size: 1.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.icon {
+  font-size: 5rem !important;
+}
