--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,21 +1,22 @@
 .container {
   height: calc(100vh);
-  padding-inline: 4rem;
+  font-size: clamp(1rem, 1vw, 1.5rem);
+  padding-inline: 4em;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 4rem;
+  gap: 4em;
 }
 
 .name {
-  font-size: 5rem;
+  font-size: 5em;
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 .sub {
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: 200;
   color: rgb(180, 180, 180);
   font-family: var(--clickable);
@@ -42,7 +43,7 @@
 }
 
 .blurb {
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: 0.5px;
@@ -62,7 +63,7 @@
 }
 
 .contact {
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: 0.5px;
@@ -73,6 +74,12 @@
   font-family: var(--clickable);
   color: var(--link);
   width: fit-content;
-  font-size: 1.75rem;
-  padding: 1rem;
+  font-size: 1.75em;
+  padding: 1em;
+}
+
+@media screen and (min-width: 50em) {
+  .container {
+    padding-inline: 30vw;
+  }
 }
